--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Welcome to My Web Page</h1>
+        <h1>Hello, I'm Templeton Lam</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
