--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <header>
+        <img src="profile.jpg" alt="My Photo" class="profile-img" />
         <h1>Hello, I'm Templeton Lam</h1>
         <nav>
             <a href="#">Home</a>
