--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
             <h2>About Me</h2>
             <p>This is a simple page I made while learning web development. It has HTML and CSS in separate files!</p>
         </section>
+
+        <section id="todo">
+            <h2>My To-Do List</h2>
+            <input type="text" id="taskInput" placeholder="Enter a new task" />
+            <button onclick="addTask()">Add Task</button>
+            <ul id="taskList"></ul>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
+<script src="script.js"></script>
 </body>
 </html>
