--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <section id="todo">
             <h2>My To-Do List</h2>
             <input type="text" id="taskInput" placeholder="Enter a new task" />
+            <input type="date" id="dueDateInput" />
             <button onclick="addTask()">Add Task</button>
             <ul id="taskList"></ul>
         </section>
