--- a/index.html
+++ b/index.html
@@ -26,11 +26,26 @@
 
         <section id="todo">
             <h2>My To-Do List</h2>
+            <label for="taskInput">Task:</label>
             <input type="text" id="taskInput" placeholder="Enter a new task" />
+
+            <label for="dueDateInput">Due Date:</label>
             <input type="date" id="dueDateInput" />
+
             <button onclick="addTask()">Add Task</button>
             <ul id="taskList"></ul>
         </section>
+
+        <div class="task-form">
+        <label for="taskInput">Task:</label>
+        <input type="text" id="taskInput" placeholder="Enter a new task" />
+    
+        <label for="dueDateInput">Due Date:</label>
+        <input type="date" id="dueDateInput" />
+
+    <button onclick="addTask()">Add Task</button>
+</div>
+
     </main>
 
     <footer>
