--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         <section>
             <h2>About Me</h2>
             <p>This is a simple page I made while learning web development. It has HTML and CSS in separate files!</p>
-        </section>
-
-        <section id="todo">
+        
             <h2>My To-Do List</h2>
             <label for="taskInput">Task:</label>
             <input type="text" id="taskInput" placeholder="Enter a new task" />
@@ -34,7 +32,7 @@
 
             <button onclick="addTask()">Add Task</button>
             <ul id="taskList"></ul>
-            <div class="task-form">
+            <div class="task-form"</div>
         </section>
 
          <label for="taskInput">Task:</label>
@@ -44,7 +42,7 @@
          <input type="date" id="dueDateInput" />
 
     <button onclick="addTask()">Add Task</button>
-    </div>
+    
 
     </main>
 
