--- a/index.html
+++ b/index.html
@@ -27,15 +27,11 @@
         <section id="todo">
             <h2>My To-Do List</h2>
             <div class="task-form">
-                <label for="taskInput">Task:</label>
-                <input type="text" id="taskInput" placeholder="Enter a new task" />
-
-                <label for="dueDateInput">Due Date:</label>
-                <input type="date" id="dueDateInput" />
-
+                <!-- ... -->
                 <button onclick="addTask()">Add Task</button>
             </div>
             <ul id="taskList"></ul>
+            <button id="clearButton" onclick="clearAllTasks()">Clear All Tasks</button>
         </section>
     </main>
 
