--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <button onclick="addTask()">Add Task</button>
             </div>
             <ul id="taskList"></ul>
+            <p id="taskCounter">0 of 0 tasks completed</p>
             <button id="clearButton" onclick="clearAllTasks()">Clear All Tasks</button>
         </section>
     </main>
