--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <ul id="taskList"></ul>
             <p id="taskCounter">0 of 0 tasks completed</p>
             <button id="clearButton" onclick="clearAllTasks()">Clear All Tasks</button>
+            <button onclick="downloadTasks()">Download Tasks</button>
         </section>
     </main>
 
