--- a/index.html
+++ b/index.html
@@ -48,4 +48,27 @@
 
     <script src="script.js"></script>
 </body>
+    
+@media (max-width: 600px) {
+    body {
+        font-size: 16px;
+        padding: 10px;
+    }
+
+    .task-form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .task-form input,
+    .task-form button {
+        margin-bottom: 10px;
+    }
+
+    nav a {
+        display: block;
+        margin: 5px 0;
+    }
+}
+
 </html>
